# src_vala_2

./: AUTHORS  COPYING  ChangeLog  INSTALL  NEWS  README  configure.ac
data/: Makefile.am  orbita.desktop  orbita.desktop.in
po/: POTFILES.in  POTFILES.skip  ru.po
src/: Makefile.am  h264_server0.vala  installGST.txt  orbita  orbita-app.vala  orbita.vala  out.h264  play.sh  server.vala
